log/build_2023-10-23_02-15-01/castelet/stderr.log
  File "/home/keny/MANOS_ws/install/castelet/lib/python3.8/site-packages/castelet/castelet.py", line 119
    self.topics = self.turtleSimControl..getServices()
                                        ^
SyntaxError: invalid syntax

